--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "chuckrincon/lumen-config-discover": "^1.0",
+        "illuminate/mail": "^8.75",
         "laravel/lumen-framework": "^8.3.1",
         "league/flysystem-aws-s3-v3": "^1.0",
         "spatie/laravel-medialibrary": "^9.9",
