--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/lumen-framework": "^8.3.1",
         "league/flysystem-aws-s3-v3": "^1.0",
         "spatie/laravel-medialibrary": "^9.9",
+        "spatie/laravel-permission": "^5.4",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
